# curso-ia

./: .gitignore  README.md  llm-01.py  pyproject.toml  rag.py
docling/: 1-extraction.py  2-extraction-images.py  4-hybrid-chunker.py
docling/test_output/: docling_paper_metadata.jsonl
fundamentos/: tokenization-01.py  tokenization-04.py
